# ticklist

./: Cargo.toml  README.md
migrations/: 001_ticklist.sql
src/: main.rs
